[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/vr-toolkit/Gui/GuiInteraction.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openvr/OpenVRAction.gdns" type="Script" id=2]
[ext_resource path="res://addons/vr-toolkit/Util/LineRenderer.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/vr-toolkit/Resources/teleport_texture.png" type="Texture" id=4]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 0.376471, 0.396078, 0.898039, 1 )
albedo_texture = ExtResource( 4 )
emission_enabled = true
emission = Color( 0.376471, 0.396078, 0.898039, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
transmission_enabled = true
transmission = Color( 0.239216, 0.52549, 1, 1 )

[sub_resource type="SphereMesh" id=2]
radius = 0.1
height = 0.2

[node name="GuiInteraction" type="Spatial"]
script = ExtResource( 1 )
visualizer_material = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
collision_mask = 524288
collide_with_areas = true

[node name="LineRenderer" parent="." instance=ExtResource( 3 )]
startThickness = 0.002
endThickness = 0.002
globalCoords = false

[node name="Node" type="Node" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Node"]
mesh = SubResource( 2 )
material/0 = null

[node name="Inputs" type="Node" parent="."]

[node name="InteractInput" type="Node" parent="Inputs"]
script = ExtResource( 2 )
pressed_action = "/actions/godot_ingame/in/trigger"

[node name="MenuInput" type="Node" parent="Inputs"]
script = ExtResource( 2 )
pressed_action = "/actions/godot_ingame/in/button_ax"
